fix build and scrollbar

--- a/src/ui/ui.css
+++ b/src/ui/ui.css
@@ -1,90 +1,96 @@
 @import "figma-plugin-ds";
 
 main {
-  padding: 1rem;
-  padding-right: calc(1rem - 10px);
-  box-sizing: border-box;
-  max-width: calc(100vw - 10px);
-  width: 100%;
+	padding: 1rem;
+	padding-right: calc(1rem - 10px);
+	box-sizing: border-box;
+	max-width: calc(100vw - 10px);
+	width: 100%;
 }
 
 h2, p {
-  margin: 0 0 0.5rem 0;
+	margin: 0 0 0.5rem 0;
+}
+
+.button--primary {
+	background: var(--green);
 }
 
 h2,
 .button--secondary,
 .button--tertiary {
-  color: var(--green);
+	color: var(--green);
 }
 
 /*
 	INPUT
  */
-textarea {
-  font-family: inherit;
-  resize: vertical;
+textarea.textarea {
+	font-family: inherit;
+	resize: vertical;
 }
 
 label, input, textarea {
-  font-weight: 500;
+	font-weight: 500;
 }
 
 label, input:not(:focus), textarea {
-  color: var(--black8);
+	color: var(--black8);
 }
 
 .button-group {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
-  grid-gap: 0.5rem;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+	grid-gap: 0.5rem;
 }
 
 .button-group > .button {
-  display: inline-block;
-  font-size: 0.75rem;
-  font-weight: 500;
+	display: inline-block;
+	font-size: 0.75rem;
+	font-weight: 500;
 }
 
 .button--secondary {
-  color: var(--purple);
-  border-color: currentColor;
+	color: var(--purple);
+	border-color: currentColor;
 }
 
 .button-group, .input {
-  margin: 1rem 0;
+	margin: 1rem 0;
 }
 
 input.input__field:not(:hover):not(:focus) {
-  border-color: var(--black1);
+	border-color: var(--black1);
 }
 
 /*
 	SCROLLBAR
  */
 ::-webkit-scrollbar {
-  width: 10px;
-  position: absolute;
+	width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background: #0004;
-  border: 2px solid #fff;
+	border-radius: 10px;
+	background: rgba(0, 0, 0, .1);
+	border: 2px solid #fff;
 }
+
 ::-webkit-resizer {
-  display: none;
+	border-radius: 0 4px 2px 4px;
+	border: 8px solid;
+	border-color: transparent rgba(0, 0, 0, .1) rgba(0, 0, 0, .1) transparent;
 }
 
 /*
 	DETAILS
  */
-details > summary,
+/* details > summary,
 details :nth-child(2) {
-  padding: 0.25rem 0.75rem;
+	padding: 0.25rem 0.75rem;
 }
 
 details:focus,
 details > summary:focus {
-  outline: var(--blue) auto 1px;
-}
+	outline: var(--blue) auto 1px;
+} */
